# genie-spaces-api

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.cursor/: mcp.json
.github/workflows/: deploy-genie-space.yml
docs/: QUICKSTART.md
examples/: minimal_space.json  programmatic_space_builder.py  sales_analytics_space.json
src/genie_spaces_api/: __init__.py  cli.py  client.py  models.py
tests/: __init__.py  test_client.py  test_models.py
